# agents-team

./: .gitignore  test_all_output.txt  test_output.txt  test_output2.txt  test_output3.txt
agents/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_output.txt  test_output3.txt
agents/src/agents/: artifacts.py  flow.py  interactive.py  llm_factory.py  main.py  quality.py  state.py
agents/src/agents/config/: pipeline.yaml  pipeline_config.py
agents/src/agents/crews/content_crew/: content_crew.py
agents/src/agents/crews/content_crew/config/: agents.yaml  tasks.yaml
agents/src/agents/crews/delivery_crew/: __init__.py  delivery_crew.py
agents/src/agents/crews/delivery_crew/config/: agents.yaml  tasks.yaml  tasks_code.yaml
agents/src/agents/crews/planning_crew/: __init__.py  planning_crew.py
agents/src/agents/crews/planning_crew/config/: agents.yaml  tasks.yaml
agents/src/agents/crews/review_crew/: __init__.py  review_crew.py
agents/src/agents/crews/review_crew/config/: agents.yaml  tasks.yaml
agents/src/agents/crews/validation_crew/: __init__.py  validation_crew.py
agents/src/agents/parsers/: __init__.py  review_parser.py
agents/src/agents/tools/: __init__.py  common_tools.py  file_tools.py  path_utils.py
agents/tests/: test_common_tools.py  test_file_tools.py  test_path_utils.py  test_quality.py  test_review_parser.py  test_state.py
docs/architecture/: architecture-review.md
docs/implementation/: backend-plan.md  frontend-plan.md
docs/qa/: qa-report.md
docs/specs/: pending-plan.md
