[project]
name = "agents"
version = "0.1.0"
description = "agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
kickoff = "agents.main:kickoff"
run_crew = "agents.main:kickoff"
plot = "agents.main:plot"
run_with_trigger = "agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
