[project]
name = "agents"
version = "0.1.0"
description = "agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.14.2",
    "litellm>=1.83.0",
]

[project.scripts]
agent-team = "agents.main:main"
agent-team-interactive = "agents.interactive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
